added some basic structures

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body{
   font-style: normal;
   background-color: var(--bgColor);
   color: var(--textPrimary);
+  font-size: 1.4rem;
 }
 main{
     width: 600px;
@@ -23,4 +24,23 @@ h1{
 h1 svg{
     width: 40px;
     fill: var(--primaryColor);
+}
+#header{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+#buttons{
+    text-align: right;
+}
+#info{
+    color: var(--primaryColor);
+}
+button{
+    background: rgba(255,255,255,.5);
+    border: 0;
+    color: rgba(255,255,255,.8);
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
 }
