--- a/style.css
+++ b/style.css
@@ -49,6 +49,19 @@ div#game{
     line-height: 35px;
     height: 105px;
     overflow: hidden;
+    position: relative;
+}
+#words{
+    filter: blur(5px);
+}
+#game:focus #words{
+    filter: blur(0);
+}
+#focus-error{
+    position: absolute;
+    inset: 0;
+    text-align: center;
+    padding-top: 35px;
 }
 div.word{
     display: inline-block;
