--- a/style.css
+++ b/style.css
@@ -51,6 +51,9 @@ div#game{
     overflow: hidden;
     position: relative;
 }
+div#game:focus{
+    outline: 0;
+}
 #words{
     filter: blur(5px);
     color: var(--textSecondary);
