--- a/style.css
+++ b/style.css
@@ -104,3 +104,15 @@ div.word{
 #game:focus #cursor{
     display: block;
 }
+
+#game.over #words{
+    opacity: .5;
+    filter: blur(0px);
+}
+
+#game.over .focus #cursor{
+    display: none;
+}
+#game.over #focus-error{
+    display: none;
+}
