--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@
     --primaryColor: #fd4;
 }
 body{
-    font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  background-color: var(--bgColor);
-  color: var(--textPrimary);
-  font-size: 1.4rem;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    background-color: var(--bgColor);
+    color: var(--textPrimary);
+    font-size: 1.4rem;
 }
 main{
     width: 600px;
